--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,4 +1,4 @@
-.product-card {
+/* .product-card {
     border: 2px solid red;
     border-radius: 15px;
     margin-bottom: 20px;
@@ -6,4 +6,4 @@
 
 .product-card img {
     height: 300px;
-}
+} */
